--- a/style.css
+++ b/style.css
@@ -4,46 +4,59 @@
   color: #333;
   font-family: Lato, sans-serif;
 }
+
 .matrix {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
+
 .matrix-img {
   width: 100%;
 }
+
 .matrix-link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .matrix { text-align: center;
+  
+  .matrix { 
+    text-align: center;
   }
+
 }
+
 .main-page {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
+
 .task-input, .new-task-input, .task-label {
   width: 56%;
   display: inline-block;
   flex-grow: 1
 }
+
 .input-wrapper {
   display: flex;
 }
+
 .todo-list {
   margin:0;
   padding: 0px;
 }
+
 .todo-item, .title {
   list-style:none;
 }
+
 .task-input, .new-task-input, .task-checkbox,.btn{
   outline:none;
 }
+
 .btn {
   background: none;
   border: 0px;
@@ -53,9 +66,11 @@
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
+
 .btn:hover {
   color: #3a3a3a;
 }
+
 /* Heading */
 .title,
 .new-task-label {
@@ -67,6 +82,7 @@
   margin: 0;
   text-transform: uppercase;
 }
+
 .task-input, .new-task-input {
   margin: 0;
   font-size: 18px;
@@ -79,6 +95,7 @@
   font-family: Lato, sans-serif;
   color: #888;
 }
+
 .task-input:focus, .new-task-input:focus {
   color: #333;
 }
@@ -88,6 +105,7 @@
   display: block;
   margin: 0 0 20px;
 }
+
 .new-task-input {
   width: 318px;
 }
@@ -97,11 +115,11 @@
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .todo-item > * {
   vertical-align: middle;
 }
@@ -109,20 +127,24 @@
 .task-checkbox {
   margin: 0 10px;
 }
+
 .task-label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
+
 .task-input {
   width: 226px
 }
+
 .btn-delete-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
+
 .btn-delete-img:hover {
   transform: rotateZ(0);
 }
