--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 .task-input, .new-task-input, .task-label {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .input-wrapper {
@@ -136,7 +136,7 @@
 }
 
 .task-input {
-  width: 226px
+  width: 226px;
 }
 
 .btn-delete-img {
@@ -151,18 +151,18 @@
 
 /* Completed */
 .completed .task-label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .task-input {
-  display: none
+  display: none;
 }
 
 .edit-mode .task-input {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-mode .task-label  {
