--- a/style.css
+++ b/style.css
@@ -5,30 +5,30 @@
   font-family: Lato, sans-serif;
 }
 
-.matrix {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.matrix-img {
+.header-img {
   width: 100%;
 }
 
-.matrix-link {
+.header-link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width: 768px) {
   
-  .matrix { 
+  .header { 
     text-align: center;
   }
 
 }
 
-.main-page {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -79,7 +79,7 @@
 
 /* Heading */
 .title,
-.new-task-label {
+.new-task-title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -109,7 +109,7 @@
 }
 
 /* New Task */
-.new-task-label {
+.new-task-title {
   display: block;
   margin: 0 0 20px;
 }
