--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@
   text-align: right;
 }
 
-.header-img {
+.header__img {
   width: 100%;
 }
 
-.header-link {
+.header__link {
   font-family: fantasy, cursive;
 }
 
@@ -34,32 +34,34 @@
   margin: 0 auto 0;
 }
 
-.task-input,
-.new-task-input,
-.task-label {
+.new-task__input,
+.task-item__input,
+.task-item__label {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
 
-.input-wrapper {
+.new-task__input-wrapper {
   display: flex;
 }
 
-.todo-list {
+.task-list {
   margin: 0;
   padding: 0px;
 }
 
-.todo-item,
-.title {
+.new-task__title,
+.incomplete-tasks__title,
+.completed-tasks__title,
+.task-item {
   list-style: none;
 }
 
-.task-input,
-.new-task-input,
-.task-checkbox,
-.btn{
+.task-item__input,
+.new-task__input,
+.task-item__checkbox,
+.btn {
   outline: none;
 }
 
@@ -78,8 +80,9 @@
 }
 
 /* Heading */
-.title,
-.new-task-title {
+.new-task__title,
+.incomplete-tasks__title,
+.completed-tasks__title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -89,8 +92,8 @@
   text-transform: uppercase;
 }
 
-.task-input,
-.new-task-input {
+.task-item__input,
+.new-task__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -103,23 +106,23 @@
   color: #888;
 }
 
-.task-input:focus,
-.new-task-input:focus {
+.task-item__input:focus,
+.new-task__input:focus {
   color: #333;
 }
 
 /* New Task */
-.new-task-title {
+.new-task__title {
   display: block;
   margin: 0 0 20px;
 }
 
-.new-task-input {
+.new-task__input {
   width: 318px;
 }
 
 /* Task list */
-.todo-item {
+.task-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -128,51 +131,57 @@
   align-items: center;
 }
 
-.todo-item > * {
+/* .task-item__checkbox,
+.task-item__label,
+.task-item__input,
+.task-item__btn-edit,
+.task-item__btn-delete */
+.task-item > * {
   vertical-align: middle;
 }
 
-.task-checkbox {
+.task-item__checkbox {
   margin: 0 10px;
 }
 
-.task-label {
+.task-item__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-.task-input {
+.new-task__input,
+.task-item__input {
   width: 226px;
 }
 
-.btn-delete-img {
+.task-item__delete-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-.btn-delete-img:hover {
+.task-item__delete-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-.completed .task-label {
+.completed-tasks__list .task-item__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-.task-input {
+.task-item__input {
   display: none;
 }
 
-.edit-mode .task-input {
+.task-item_edit-mode .task-item__input {
   display: inline-block;
   width: 224px;
 }
 
-.edit-mode .task-label  {
+.task-item_edit-mode .task-item__label  {
   display: none;
 }
